need to transition to message room

--- a/page.html
+++ b/page.html
@@ -33,8 +33,8 @@
       parent.id = "selector";
       
       socket.on('namespaceApproved', function(data) {
-          window.location = 'next.html';
-      }
+          //window.location = "C:\Users\Justin Kelly\TextChat\new_project\TextChatApp\next.html";
+      });
       var namesp;
       socket.on('sendNamespace', function(data) { 
              namesp = data.namespaces;
